--- a/carsharing/mysite/carsharing/templates/carsharing/single-product.html
+++ b/carsharing/mysite/carsharing/templates/carsharing/single-product.html
@@ -27,17 +27,12 @@
       rel="stylesheet"
       type="text/css"
     />
-
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="css/font-awesome.min.css" />
-
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/owl.carousel.css" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="css/responsive.css" />
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'carsharing/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'carsharing/css/font-awesome.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'carsharing/css/owl.carousel.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'carsharing/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'carsharing/css/responsive.css' %}">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -282,14 +277,14 @@
     <!-- Bootstrap JS form CDN -->
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
-    <!-- jQuery sticky menu -->
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/jquery.sticky.js"></script>
+     <!-- jQuery sticky menu -->
+    <script src="{% static 'carsharing/js/owl.carousel.min.js' %}"></script>
+    <script src="{% static 'carsharing/js/jquery.sticky.js' %}"></script>
 
     <!-- jQuery easing -->
-    <script src="js/jquery.easing.1.3.min.js"></script>
+    <script type="text/javascript" src="{% static 'carsharing/js/jquery.easing.1.3.min.js' %}"></script>
 
     <!-- Main Script -->
-    <script src="js/main.js"></script>
+    <script type="text/javascript" src="{% static 'carsharing/js/main.js' %}"></script>
   </body>
 </html>
