--- a/carsharing/mysite/carsharing/templates/carsharing/profile.html
+++ b/carsharing/mysite/carsharing/templates/carsharing/profile.html
@@ -139,7 +139,7 @@
                   data-product_sku=""
                   data-product_id="70"
                   rel="nofollow"
-                  href="addCar.html"
+                  href="add-car"
                   >+</a
                 >
               </div>
