--- a/carsharing/mysite/carsharing/templates/carsharing/single-product.html
+++ b/carsharing/mysite/carsharing/templates/carsharing/single-product.html
@@ -231,7 +231,7 @@
                       </div>
                     </div>
 
-                    <a href="rentAcar.html"
+                    <a href="rent-a-car"
                       ><button class="add_to_cart_button" type="submit">
                         Rentar
                       </button></a
