--- a/carsharing/mysite/carsharing/templates/carsharing/index.html
+++ b/carsharing/mysite/carsharing/templates/carsharing/index.html
@@ -35,19 +35,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'carsharing/style.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'carsharing/css/responsive.css' %}">
 
-    <!-- Bootstrap -->
-<!--    <link rel="stylesheet" href="" />-->
 
-    <!-- Font Awesome -->
-<!--    <link rel="stylesheet" href="css/" />-->
-
-    <!-- Custom CSS -->
-<!--    <link rel="stylesheet" href="css/owl.carousel.css" />-->
-<!--    <link rel="stylesheet" href="style.css" />-->
-<!--    <link rel="stylesheet" href="css/responsive.css" />-->
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -125,7 +113,7 @@
                   data-product_sku=""
                   data-product_id="70"
                   rel="nofollow"
-                  href="single-product.html"
+                  href="single-product"
                   >Rentar</a
                 >
               </div>
