--- a/carsharing/mysite/carsharing/templates/carsharing/rentAcar.html
+++ b/carsharing/mysite/carsharing/templates/carsharing/rentAcar.html
@@ -10,22 +10,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Product Page - Ustora Demo</title>
-    
+    {% load static %}
     <!-- Google Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,200,300,700,600' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,300' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Raleway:400,100' rel='stylesheet' type='text/css'>
     
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/owl.carousel.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="css/responsive.css">
+        <link rel="stylesheet" type="text/css" href="{% static 'carsharing/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'carsharing/css/font-awesome.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'carsharing/css/owl.carousel.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'carsharing/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'carsharing/css/responsive.css' %}">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -49,9 +44,9 @@
                 </div> 
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="profile.html">Perfil</a></li>
-                        <li class="active"><a href="single-product.html">Single product</a></li>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="perfil">Perfil</a></li>
+                        <li class="active"><a href="single-product">Single product</a></li>
                     </ul>
                 </div>  
             </div>
@@ -180,14 +175,14 @@
     <!-- Bootstrap JS form CDN -->
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     
-    <!-- jQuery sticky menu -->
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/jquery.sticky.js"></script>
-    
+  <!-- jQuery sticky menu -->
+    <script src="{% static 'carsharing/js/owl.carousel.min.js' %}"></script>
+    <script src="{% static 'carsharing/js/jquery.sticky.js' %}"></script>
+
     <!-- jQuery easing -->
-    <script src="js/jquery.easing.1.3.min.js"></script>
-    
+    <script type="text/javascript" src="{% static 'carsharing/js/jquery.easing.1.3.min.js' %}"></script>
+
     <!-- Main Script -->
-    <script src="js/main.js"></script>
+    <script type="text/javascript" src="{% static 'carsharing/js/main.js' %}"></script>
   </body>
 </html>
