--- a/carsharing/mysite/carsharing/templates/carsharing/signIn.html
+++ b/carsharing/mysite/carsharing/templates/carsharing/signIn.html
@@ -8,22 +8,22 @@
     <meta name="description" content="Colorlib Templates">
     <meta name="author" content="Colorlib">
     <meta name="keywords" content="Colorlib Templates">
-
+     {% load static %}
     <!-- Title Page-->
     <title>Registro</title>
 
     <!-- Icons font CSS-->
-    <link href="vendor/mdi-font/css/material-design-iconic-font.min.css" rel="stylesheet" media="all">
-    <link href="vendor/font-awesome-4.7/css/font-awesome.min.css" rel="stylesheet" media="all">
+    <link href="{% static 'carsharing/vendor/mdi-font/css/material-design-iconic-font.min.css' %}" rel="stylesheet" media="all">
+    <link href="{% static 'carsharing/vendor/font-awesome-4.7/css/font-awesome.min.css' %}" rel="stylesheet" media="all">
     <!-- Font special for pages-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
 
     <!-- Vendor CSS-->
-    <link href="vendor/select2/select2.min.css" rel="stylesheet" media="all">
-    <link href="vendor/datepicker/daterangepicker.css" rel="stylesheet" media="all">
+    <link href="{% static 'carsharing/vendor/select2/select2.min.css' %}" rel="stylesheet" media="all">
+    <link href="{% static 'carsharing/vendor/datepicker/daterangepicker.css' %}" rel="stylesheet" media="all">
 
     <!-- Main CSS-->
-    <link href="css/main.css" rel="stylesheet" media="all">
+    <link href="{% static 'carsharing/css/main.css' %}" rel="stylesheet" media="all">
 </head>
 
 <body style="background-image: url('images/bg-02.jpg'); background-repeat: no-repeat; background-size: 100%;">
@@ -34,7 +34,7 @@
                     <h2 class="title">REGISTRO CARSHARING</h2>
                 </div>
                 <div class="card-body">
-                    <form method="POST" action="LogIn.html">
+                    <form method="POST" action="log-in">{% csrf_token %}
                         <div class="form-row m-b-55">
                             <div class="name">Nombre</div>
                             <div class="value">
@@ -90,14 +90,14 @@
     </div>
 
     <!-- Jquery JS-->
-    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="{% static 'carsharing/vendor/jquery/jquery.min.js' %}"></script>
     <!-- Vendor JS-->
-    <script src="vendor/select2/select2.min.js"></script>
-    <script src="vendor/datepicker/moment.min.js"></script>
-    <script src="vendor/datepicker/daterangepicker.js"></script>
+    <script src="{% static 'carsharing/vendor/select2/select2.min.js' %}"></script>
+    <script src="{% static 'carsharing/vendor/datepicker/moment.min.js' %}"></script>
+    <script src="{% static 'carsharing/vendor/datepicker/daterangepicker.js' %}"></script>
 
     <!-- Main JS-->
-    <script src="js/global.js"></script>
+    <script src="{% static 'carsharing/js/global.js' %}"></script>
 
 </body><!-- This templates was made by Colorlib (https://colorlib.com) -->
 
