vehiculo foto field

--- a/carsharing/mysite/carsharing/templates/carsharing/profile.html
+++ b/carsharing/mysite/carsharing/templates/carsharing/profile.html
@@ -90,7 +90,7 @@
         <div class="col f-flex justify-content-center">
           <div style="text-align: center;">
             <img
-              src="img/perfil.png"
+              src="{% static 'carsharing/img/perfil.png' %}"
               alt=""
               style="width: 200px; height: 200px;"
             />
@@ -109,7 +109,7 @@
                 </div>
               </div>
               {% endfor %}
-              <div class="add_car_to_profile" style="padding-top: 70px;">
+              <div class="add_car_to_profile" style="padding-top: 70px;padding-bottom:5px;">
                 <a
                   class="add_to_cart_button"
                   data-quantity=""
