--- a/carsharing/mysite/carsharing/templates/carsharing/logIn.html
+++ b/carsharing/mysite/carsharing/templates/carsharing/logIn.html
@@ -61,7 +61,7 @@
 						<div class="wrap-login100-form-btn">
 							<div class="login100-form-bgbtn"></div>
 							<button  class="login100-form-btn">
-								<a href="/"  class="login100-form-btn">
+								<a href="/index"  class="login100-form-btn">
 								Iniciar Sesión
 								</a>
 							</button>
@@ -69,11 +69,16 @@
 					</div>
 
 					<div style="font-size: large;" class="txt1 text-center p-t-20 p-b-20">
-						<span>
-							Registrate usando
-						</span>
+						<a style="font-size: large;" href="sign-in" class="txt2">
+							Regístrate
+						</a>
 					</div>
 
+					<div class="flex-col-c p-t-20">
+						<span style="font-size: large;" class="txt1 p-b-17">
+							O Regístrate usando
+						</span>	
+					</div>
 					<div class="flex-c-m">
 						<a href="#" class="login100-social-item bg1">
 							<i class="fa fa-facebook"></i>
@@ -85,16 +90,6 @@
 
 						<a href="#" class="login100-social-item bg3">
 							<i class="fa fa-google"></i>
-						</a>
-					</div>
-
-					<div class="flex-col-c p-t-20">
-						<span style="font-size: large;" class="txt1 p-b-17">
-							O Regístrate usando
-						</span>
-
-						<a style="font-size: large;" href="sign-in" class="txt2">
-							Regístrate
 						</a>
 					</div>
 				</form>
