--- a/carsharing/mysite/carsharing/templates/carsharing/index.html
+++ b/carsharing/mysite/carsharing/templates/carsharing/index.html
@@ -60,7 +60,7 @@
           </div>
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="/">Home</a></li>
+              <li class="active"><a href="index">Home</a></li>
               <li><a href="perfil">Perfil</a></li>
               <li><a href="single-product">Single product</a></li>
             </ul>
