--- a/carsharing/mysite/carsharing/templates/carsharing/profile.html
+++ b/carsharing/mysite/carsharing/templates/carsharing/profile.html
@@ -108,7 +108,7 @@
                   </div>
                   <h2><a href="">{{vehiculo.0.marca}} {{vehiculo.0.modelo}}</a></h2>
                   <div class="product-carousel-price">
-                    <ins>{{vehiculo.1.precio}}</ins>
+                    <ins>{{vehiculo.1.precio}} Bs/hora</ins>
                   </div>
                 </div>
               </div>
