--- a/carsharing/mysite/carsharing/templates/carsharing/addCar.html
+++ b/carsharing/mysite/carsharing/templates/carsharing/addCar.html
@@ -60,7 +60,7 @@
           </div>
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li><a href="/">Home</a></li>
+              <li><a href="index">Home</a></li>
               <li class="active"><a href="perfil">Perfil</a></li>
               <li>
                 <a href="single-product">Single product</a>
