--- a/carsharing/mysite/carsharing/templates/carsharing/addCar.html
+++ b/carsharing/mysite/carsharing/templates/carsharing/addCar.html
@@ -142,17 +142,7 @@
     <div class="row">
        <div class="col-md-12 col-sm-12">
         <h3 class="sidebar-title">Ciudad</h3>
-  <select id="cars" name="cars">
-    <option value="La Paz">La Paz</option>
-    <option value="Oruro">Oruro</option>
-    <option value="Potosi">Potosi</option>
-    <option value="Cochabamba">Cochabamba</option>
-    <option value="Tarija">Tarija</option>
-    <option value="Chuquisaca">Chuquisaca</option>
-    <option value="Santa Cruz">Santa Cruz</option>
-    <option value="Beni">Beni</option>
-    <option value="Pando">Pando</option>
-  </select>
+         {{form.ciudad}}
        </div>
     </div>
   </div>
