--- a/carsharing/mysite/carsharing/templates/carsharing/signIn.html
+++ b/carsharing/mysite/carsharing/templates/carsharing/signIn.html
@@ -41,13 +41,13 @@
                                 <div class="row row-space">
                                     <div class="col-2">
                                         <div class="input-group-desc">
-                                            <input class="input--style-5" type="text" name="first_name">
+                                            <input class="input--style-5" type="text" name="nombre">
                                             <label class="label--desc">Nombres</label>
                                         </div>
                                     </div>
                                     <div class="col-2">
                                         <div class="input-group-desc">
-                                            <input class="input--style-5" type="text" name="last_name">
+                                            <input class="input--style-5" type="text" name="apellido">
                                             <label class="label--desc">Apellidos</label>
                                         </div>
                                     </div>
@@ -63,10 +63,18 @@
                             </div>
                         </div>
                         <div class="form-row">
+                            <div class="name">Contacto</div>
+                            <div class="value">
+                                <div class="input-group">
+                                    <input class="input--style-5" type="text" name="contacto">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-row">
                             <div class="name">Contraseña</div>
                             <div class="value">
                                 <div class="input-group">
-                                    <input class="input--style-5" type="password" name="email">
+                                    <input class="input--style-5" type="password" name="password">
                                 </div>
                             </div>
                         </div>
@@ -74,7 +82,7 @@
                             <div class="name">Confirmar contraseña</div>
                             <div class="value">
                                 <div class="input-group">
-                                    <input class="input--style-5" type="password" name="email">
+                                    <input class="input--style-5" type="password" name="password2">
                                 </div>
                             </div>
                         </div>
