--- a/carsharing/mysite/carsharing/templates/carsharing/index.html
+++ b/carsharing/mysite/carsharing/templates/carsharing/index.html
@@ -96,14 +96,20 @@
           </form>
         </div>
         <div class="row">
+           {% for i in oject_list %}
           <div class="col-md-3 col-sm-6">
             <div class="single-shop-product">
               <div class="product-upper" style="height: 200px;">
-                <img src="img/aut2.jpeg" alt="" style="height: 200px;" />
+                    {% if vehiculo.0.foto %}
+                    <img src="{{ i.foto.url }}" alt="" style="height: 200px;" />
+                    {% else %}
+                    <img src="{% static 'carsharing/images/auto_placeholder.jpg' %}" alt="" style="height: 200px;" />
+                    {% endif %}
+
               </div>
-              <h2><a href="">Apple new mac book 2015 March :P</a></h2>
+              <h2><a href="">{{i.modelo}}</a></h2>
               <div class="product-carousel-price">
-                <ins>$899.00</ins> <del>$999.00</del>
+                <ins>{{i.año}}</ins>
               </div>
 
               <div class="product-option-shop">
@@ -119,354 +125,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="single-shop-product">
-              <div class="product-upper" style="height: 200px;">
-                <img src="img/auto1.jpeg" alt="" style="height: 200px;" />
-              </div>
-              <h2><a href="">Apple new mac book 2015 March :P</a></h2>
-              <div class="product-carousel-price">
-                <ins>$899.00</ins> <del>$999.00</del>
-              </div>
-
-              <div class="product-option-shop">
-                <a
-                  class="add_to_cart_button"
-                  data-quantity="1"
-                  data-product_sku=""
-                  data-product_id="70"
-                  rel="nofollow"
-                  href="single-product.html"
-                  >Rentar</a
-                >
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="single-shop-product">
-              <div class="product-upper" style="height: 200px;">
-                <img src="img/auto2.jpeg" alt="" style="height: 200px;" />
-              </div>
-              <h2><a href="">Apple new mac book 2015 March :P</a></h2>
-              <div class="product-carousel-price">
-                <ins>$100.00</ins> <del></del>
-              </div>
-
-              <div class="product-option-shop">
-                <a
-                  class="add_to_cart_button"
-                  data-quantity="1"
-                  data-product_sku=""
-                  data-product_id="70"
-                  rel="nofollow"
-                  href="single-product.html"
-                  >Rentar</a
-                >
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="single-shop-product">
-              <div class="product-upper" style="height: 200px;">
-                <img src="img/auto3.jpeg" alt="" style="height: 200px;" />
-              </div>
-              <h2><a href="">Apple new mac book 2015 March :P</a></h2>
-              <div class="product-carousel-price">
-                <ins>$899.00</ins> <del>$999.00</del>
-              </div>
-
-              <div class="product-option-shop">
-                <a
-                  class="add_to_cart_button"
-                  data-quantity="1"
-                  data-product_sku=""
-                  data-product_id="70"
-                  rel="nofollow"
-                  href="single-product.html"
-                  >Rentar</a
-                >
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-3 col-sm-6">
-            <div class="single-shop-product">
-              <div class="product-upper" style="height: 200px;">
-                <img src="img/auto5.jpeg" alt="" style="height: 200px;" />
-              </div>
-              <h2><a href="">Apple new mac book 2015 March :P</a></h2>
-              <div class="product-carousel-price">
-                <ins>$899.00</ins> <del>$999.00</del>
-              </div>
-
-              <div class="product-option-shop">
-                <a
-                  class="add_to_cart_button"
-                  data-quantity="1"
-                  data-product_sku=""
-                  data-product_id="70"
-                  rel="nofollow"
-                  href="single-product.html"
-                  >Rentar</a
-                >
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="single-shop-product">
-              <div class="product-upper" style="height: 200px;">
-                <img src="img/auto6.jpeg" alt="" style="height: 200px;" />
-              </div>
-              <h2><a href="">Apple new mac book 2015 March :P</a></h2>
-              <div class="product-carousel-price">
-                <ins>$899.00</ins> <del>$999.00</del>
-              </div>
-
-              <div class="product-option-shop">
-                <a
-                  class="add_to_cart_button"
-                  data-quantity="1"
-                  data-product_sku=""
-                  data-product_id="70"
-                  rel="nofollow"
-                  href="single-product.html"
-                  >Rentar</a
-                >
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="single-shop-product">
-              <div class="product-upper" style="height: 200px;">
-                <img src="img/auto7.jpeg" alt="" style="height: 200px;" />
-              </div>
-              <h2><a href="">Apple new mac book 2015 March :P</a></h2>
-              <div class="product-carousel-price">
-                <ins>$100.00</ins> <del></del>
-              </div>
-
-              <div class="product-option-shop">
-                <a
-                  class="add_to_cart_button"
-                  data-quantity="1"
-                  data-product_sku=""
-                  data-product_id="70"
-                  rel="nofollow"
-                  href="single-product.html"
-                  >Rentar</a
-                >
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="single-shop-product">
-              <div class="product-upper" style="height: 200px;">
-                <img src="img/auto8.jpeg" alt="" style="height: 200px;" />
-              </div>
-              <h2><a href="">Apple new mac book 2015 March :P</a></h2>
-              <div class="product-carousel-price">
-                <ins>$899.00</ins> <del>$999.00</del>
-              </div>
-
-              <div class="product-option-shop">
-                <a
-                  class="add_to_cart_button"
-                  data-quantity="1"
-                  data-product_sku=""
-                  data-product_id="70"
-                  rel="nofollow"
-                  href="single-product.html"
-                  >Rentar</a
-                >
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-3 col-sm-6">
-            <div class="single-shop-product">
-              <div class="product-upper" style="height: 200px;">
-                <img src="img/auto9.jpeg" alt="" style="height: 200px;" />
-              </div>
-              <h2><a href="">Apple new mac book 2015 March :P</a></h2>
-              <div class="product-carousel-price">
-                <ins>$899.00</ins> <del>$999.00</del>
-              </div>
-
-              <div class="product-option-shop">
-                <a
-                  class="add_to_cart_button"
-                  data-quantity="1"
-                  data-product_sku=""
-                  data-product_id="70"
-                  rel="nofollow"
-                  href="single-product.html"
-                  >Rentar</a
-                >
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="single-shop-product">
-              <div class="product-upper" style="height: 200px;">
-                <img src="img/auto10.jpeg" alt="" style="height: 200px;" />
-              </div>
-              <h2><a href="">Apple new mac book 2015 March :P</a></h2>
-              <div class="product-carousel-price">
-                <ins>$899.00</ins> <del>$999.00</del>
-              </div>
-
-              <div class="product-option-shop">
-                <a
-                  class="add_to_cart_button"
-                  data-quantity="1"
-                  data-product_sku=""
-                  data-product_id="70"
-                  rel="nofollow"
-                  href="single-product.html"
-                  >Rentar</a
-                >
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="single-shop-product">
-              <div class="product-upper" style="height: 200px;">
-                <img src="img/auto11.jpeg" alt="" style="height: 200px;" />
-              </div>
-              <h2><a href="">Apple new mac book 2015 March :P</a></h2>
-              <div class="product-carousel-price">
-                <ins>$100.00</ins> <del></del>
-              </div>
-
-              <div class="product-option-shop">
-                <a
-                  class="add_to_cart_button"
-                  data-quantity="1"
-                  data-product_sku=""
-                  data-product_id="70"
-                  rel="nofollow"
-                  href="single-product.html"
-                  >Rentar</a
-                >
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="single-shop-product">
-              <div class="product-upper" style="height: 200px;">
-                <img src="img/auto12.jpeg" alt="" style="height: 200px;" />
-              </div>
-              <h2><a href="">Apple new mac book 2015 March :P</a></h2>
-              <div class="product-carousel-price">
-                <ins>$899.00</ins> <del>$999.00</del>
-              </div>
-
-              <div class="product-option-shop">
-                <a
-                  class="add_to_cart_button"
-                  data-quantity="1"
-                  data-product_sku=""
-                  data-product_id="70"
-                  rel="nofollow"
-                  href="single-product.html"
-                  >Rentar</a
-                >
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-3 col-sm-6">
-            <div class="single-shop-product">
-              <div class="product-upper" style="height: 200px;">
-                <img src="img/auto13.jpeg" alt="" style="height: 200px;" />
-              </div>
-              <h2><a href="">Apple new mac book 2015 March :P</a></h2>
-              <div class="product-carousel-price">
-                <ins>$899.00</ins> <del>$999.00</del>
-              </div>
-
-              <div class="product-option-shop">
-                <a
-                  class="add_to_cart_button"
-                  data-quantity="1"
-                  data-product_sku=""
-                  data-product_id="70"
-                  rel="nofollow"
-                  href="single-product.html"
-                  >Rentar</a
-                >
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="single-shop-product">
-              <div class="product-upper" style="height: 200px;">
-                <img src="img/auto14.jpeg" alt="" style="height: 200px;" />
-              </div>
-              <h2><a href="">Apple new mac book 2015 March :P</a></h2>
-              <div class="product-carousel-price">
-                <ins>$899.00</ins> <del>$999.00</del>
-              </div>
-
-              <div class="product-option-shop">
-                <a
-                  class="add_to_cart_button"
-                  data-quantity="1"
-                  data-product_sku=""
-                  data-product_id="70"
-                  rel="nofollow"
-                  href="single-product.html"
-                  >Rentar</a
-                >
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="single-shop-product">
-              <div class="product-upper" style="height: 200px;">
-                <img src="img/auto15.jpeg" alt="" style="height: 200px;" />
-              </div>
-              <h2><a href="">Apple new mac book 2015 March :P</a></h2>
-              <div class="product-carousel-price">
-                <ins>$100.00</ins> <del></del>
-              </div>
-
-              <div class="product-option-shop">
-                <a
-                  class="add_to_cart_button"
-                  data-quantity="1"
-                  data-product_sku=""
-                  data-product_id="70"
-                  rel="nofollow"
-                  href="single-product.html"
-                  >Rentar</a
-                >
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="single-shop-product">
-              <div class="product-upper" style="height: 200px;">
-                <img src="img/auto16.jpeg" alt="" style="height: 200px;" />
-              </div>
-              <h2><a href="">Apple new mac book 2015 March :P</a></h2>
-              <div class="product-carousel-price">
-                <ins>$899.00</ins> <del>$999.00</del>
-              </div>
-
-              <div class="product-option-shop">
-                <a
-                  class="add_to_cart_button"
-                  data-quantity="1"
-                  data-product_sku=""
-                  data-product_id="70"
-                  rel="nofollow"
-                  href="single-product.html"
-                  >Rentar</a
-                >
-              </div>
-            </div>
-          </div>
+	{% endfor %}
         </div>
 
         <div class="row">
