--- a/carsharing/mysite/carsharing/templates/carsharing/index.html
+++ b/carsharing/mysite/carsharing/templates/carsharing/index.html
@@ -63,6 +63,7 @@
               <li class="active"><a href="index">Home</a></li>
               <li><a href="perfil">Perfil</a></li>
               <li><a href="single-product">Single product</a></li>
+              <button onclick="location.href='{% url 'log-out'%}'">Log Out</button>
             </ul>
           </div>
         </div>
