--- a/carsharing/mysite/carsharing/templates/carsharing/logIn.html
+++ b/carsharing/mysite/carsharing/templates/carsharing/logIn.html
@@ -33,7 +33,7 @@
 	<div class="limiter">
 		<div class="container-login100" style="background-image: url('images/bg-02.jpg');">
 			<div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
-				<form class="login100-form validate-form">
+				<form class="login100-form validate-form" method="POST" action="/index">{% csrf_token %}
 					<span class="login100-form-title p-b-49">
 						Iniciar Sesión<br/>
 						Carsharing
@@ -41,13 +41,13 @@
 
 					<div class="wrap-input100 validate-input m-b-23" data-validate = "Username is reauired">
 						<span class="label-input100">Usuario</span>
-						<input class="input100" type="text" name="username" placeholder="Ingrese su usuario">
+						<input class="input100" type="text" name="usuario" placeholder="Ingrese su usuario">
 						<span class="focus-input100" data-symbol="&#xf206;"></span>
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate="Password is required">
 						<span class="label-input100">Contraseña</span>
-						<input class="input100" type="password" name="pass" placeholder="Ingrese su contraseña">
+						<input class="input100" type="password" name="password" placeholder="Ingrese su contraseña">
 						<span class="focus-input100" data-symbol="&#xf190;"></span>
 					</div>
 					
@@ -60,8 +60,8 @@
 					<div class="container-login100-form-btn">
 						<div class="wrap-login100-form-btn">
 							<div class="login100-form-bgbtn"></div>
-							<button  class="login100-form-btn">
-								<a href="/index"  class="login100-form-btn">
+							<button  class="login100-form-btn" type="submit">
+								<a  class="login100-form-btn">
 								Iniciar Sesión
 								</a>
 							</button>
