--- a/carsharing/mysite/carsharing/templates/carsharing/signIn.html
+++ b/carsharing/mysite/carsharing/templates/carsharing/signIn.html
@@ -34,7 +34,7 @@
                     <h2 class="title">REGISTRO CARSHARING</h2>
                 </div>
                 <div class="card-body">
-                    <form method="POST" action="/">{% csrf_token %}
+                    <form method="POST" action="/index">{% csrf_token %}
                         <div class="form-row m-b-55">
                             <div class="name">Nombre</div>
                             <div class="value">
@@ -42,7 +42,7 @@
                                     <div class="col-2">
                                         <div class="input-group-desc">
                                             <input class="input--style-5" type="text" name="nombre">
-                                            <label class="label--desc">Nombres</label>
+                                            <label class="label--desc">Nombre</label>
                                         </div>
                                     </div>
                                     <div class="col-2">
