--- a/carsharing/mysite/carsharing/templates/carsharing/signIn.html
+++ b/carsharing/mysite/carsharing/templates/carsharing/signIn.html
@@ -55,6 +55,14 @@
                             </div>
                         </div>
                         <div class="form-row">
+                            <div class="name">Usuario</div>
+                            <div class="value">
+                                <div class="input-group">
+                                    <input class="input--style-5" type="text" name="usuario">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-row">
                             <div class="name">Email</div>
                             <div class="value">
                                 <div class="input-group">
