--- a/carsharing/mysite/carsharing/templates/carsharing/signIn.html
+++ b/carsharing/mysite/carsharing/templates/carsharing/signIn.html
@@ -34,7 +34,7 @@
                     <h2 class="title">REGISTRO CARSHARING</h2>
                 </div>
                 <div class="card-body">
-                    <form method="POST" action="/index">{% csrf_token %}
+                    <form method="POST" action="/">{% csrf_token %}
                         <div class="form-row m-b-55">
                             <div class="name">Nombre</div>
                             <div class="value">
